upgraded java and springboot version